fix popovers on mobile, fix ids

--- a/src/Options.scss
+++ b/src/Options.scss
@@ -1,5 +1,4 @@
-.Options .Heading label {
-  display: inline;
+.Options .Heading .FormLabel {
   text-align: left;
   font-size: 21px;
   font-weight: 300;
